updated desing of site

--- a/index.html
+++ b/index.html
@@ -29,14 +29,15 @@
     <!-- link the relevant css files -->
     <!--                             -->
     <link rel="stylesheet" type="text/css" href="templates/index.css">
-
+    <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
+    
   <!-- end of head -->
   <!--             -->
   </head>
   
   <!------------------------ define the html page body ----------------------->
   <!--                                                                      -->
-  <body>
+  <body class="bg">
 
     <!--------------------- define the html page header ---------------------->
     <!--                                                                    -->
@@ -50,7 +51,7 @@
       <!--                          -->
       <ul class="nav-links">
 	<li class="nav-item">
-	  <a href="index.html">Home</a>
+	  <a href="index.html" class="active">Home</a>
 	</li>
 	<li class="nav-item">
 	  <a href="#">Search</a>
@@ -66,7 +67,9 @@
     <!-- end of header -->
     <!--               -->
     </header>
-    
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.<br><br> Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. <br><br>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+    </p>
   <!-- end of body -->
   <!--             -->    
   </body>
