Added few design changes

--- a/index.html
+++ b/index.html
@@ -114,12 +114,12 @@
 	  </h2>
 	  
 	  <p>
-	    Reach Robotics, the company behind the spider-like MekaMon robot you might’ve seen
+	    Reach Robotics, the company behind the spider-like MekaMon robot you might've seen
 	    on the shelves at the Apple Store, is closing down.
-	    Billed as the “world’s first gaming robot,” MekaMon is part video game, part
+	    Billed as the &quot;world's first gaming robot,&quot; MekaMon is part video game, part
 	    STEM tool. You could plop it down on the carpet and point your phone at it to
 	    battle virtual augmented reality enemies, face off against other MekaMon owners
-	    in multiplayer battles or build custom programs for the robot on top of Apple’s
+	    in multiplayer battles or build custom programs for the robot on top of Apple's
 	    Swift Playgrounds.
 	  </p>
 
@@ -150,8 +150,8 @@
 	    new owners. The closing is by nature the most complicated part
 	    of the proceedings. The task of tying together every loose end
 	    and officially sealing the deal can end up dragging on and on,
-	    a proceeding somewhat at odds with today’s lightning-paced business
-	    environment. There’s also the fact that, for an everyday homebuyer
+	    a proceeding somewhat at odds with today's lightning-paced business
+	    environment. There's also the fact that, for an everyday homebuyer
 	    unaccustomed to the ins and outs of real estate purchases, the
 	    process shuts them out and leaves them waiting.
 	  </p>
